--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "certfacil:build"
+            "browserTarget": "certfacil:build",
+            "port": 80
           },
           "configurations": {
             "production": {
