--- a/package.json
+++ b/package.json
@@ -22,21 +22,28 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "bootstrap": "^4.6.0",
+    "firebase": "^7.0 || ^8.0",
     "g": "^2.0.1",
+    "jspdf": "^2.3.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.10",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "^11.2.10",
     "@angular/compiler-cli": "~11.2.10",
     "@netlify-builder/deploy": "^3.2.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -45,15 +52,10 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lite-server": "^2.6.1",
+    "open": "^7.0.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "@angular-devkit/architect": ">= 0.900 < 0.1200",
-    "firebase-tools": "^8.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3"
+    "typescript": "~4.1.5"
   }
 }
