--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@angular/router": "~11.2.10",
     "bootstrap": "^4.6.0",
     "firebase": "^7.0 || ^8.0",
+    "fs": "*",
     "g": "^2.0.1",
+    "googleapis": "^73.0.0",
     "html2canvas": "*",
     "jspdf": "^2.3.1",
     "ngx-bootstrap": "^6.2.0",
+    "path": "^0.12.7",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -40,7 +43,7 @@
     "@netlify-builder/deploy": "^3.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jspdf": "^1.3.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.13",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
