Fix: inclusão de imagem

--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
-    "@angular/fire": "^6.1.4",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.10",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.6.0",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^8.6.1",
     "fs": "*",
     "g": "^2.0.1",
     "googleapis": "^73.0.0",
