--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@21epub/use-rxjs-subject": "^0.1.4",
     "@angular/animations": "~11.2.10",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.2.10",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
