--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fs": "*",
     "g": "^2.0.1",
     "googleapis": "^73.0.0",
-    "html2canvas": "*",
+    "html2canvas": "^1.3.1",
     "jspdf": "^2.3.1",
     "ngx-bootstrap": "^6.2.0",
     "path": "^0.12.7",
