--- a/angular.json
+++ b/angular.json
@@ -63,8 +63,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "certfacil:build",
-            "port": 8082
+            "browserTarget": "certfacil:build"
           },
           "configurations": {
             "production": {
